<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".StartTimer"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/started_title"
        android:id="@+id/started_title"
        android:textSize="@dimen/abc_text_size_display_2_material"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/started_description_pre"
        android:id="@+id/started_description_pre"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/abc_primary_text_material_light"
        android:textSize="@dimen/abc_text_size_headline_material"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/activity_vertical_spacing" />

    <Chronometer
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/started_chronometer"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/abc_text_size_display_2_material"
        android:enabled="true"
        android:paddingTop="@dimen/activity_vertical_spacing"
        android:paddingBottom="@dimen/activity_vertical_spacing" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_stoptimer_normal"
        android:id="@+id/button_stoptimer_normal"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/abc_text_size_display_1_material"
        android:layout_marginBottom="@dimen/activity_vertical_spacing"
        android:layout_marginTop="@dimen/activity_vertical_spacing"
        android:onClick="stopTimerNormal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_stoptimer_mistake"
        android:id="@+id/button_stoptimer_mistake"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/abc_text_size_display_1_material" />

</LinearLayout>
