<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".StartTimer"
    android:orientation="vertical"
    android:weightSum="1">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/finished_title"
        android:id="@+id/finished_title"
        android:textSize="@dimen/abc_text_size_display_2_material"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/finished_description_text"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/abc_primary_text_material_light"
        android:textSize="@dimen/abc_text_size_headline_material"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/activity_vertical_spacing"
        android:layout_marginBottom="@dimen/activity_vertical_spacing" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.5">

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/entries"
            android:choiceMode="none" />
    </ScrollView>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send_by_mail"
        android:layout_alignParentLeft="true"
        android:onClick="storeDescriptionAndNewEntry" />

</LinearLayout>
